# cmaketest

./: CMakeLists.txt  CMakePresets.json
helpers/: CMakeLists.txt
project/: CMakeLists.txt
project/include/project/: myfile.h
project/src/: myfile.cpp
src/: main.cpp
tests/: CMakeLists.txt
